--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dynaconf>=3.2.12",
+    "flask-cors>=6.0.1",
     "flask>=3.1.2",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
