Criação de enviroments e ajuste do nginx para fazer o angular rodar no container

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -57,7 +57,13 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "frontend:build:production"
+              "buildTarget": "frontend:build:production",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.development.ts",
+                  "with": "src/environments/environment.ts"
+                }
+              ]
             },
             "development": {
               "buildTarget": "frontend:build:development"
