--- a/frontend/Dockerfile-angular
+++ b/frontend/Dockerfile-angular
@@ -1,22 +1,19 @@
 # Etapa 1: Build do Angular
-FROM node:24 AS build
-
-WORKDIR /usr/src/app
+FROM node:24-alpine AS build
+WORKDIR /app
 
 COPY package*.json ./
-
-RUN npm install
+RUN npm ci
 
 COPY . .
-
-RUN npm run build --prod
+RUN npm run build -- --configuration production
 
 FROM nginx:alpine
-
 RUN rm -rf /usr/share/nginx/html/*
 
-COPY --from=build /usr/src/app/dist/frontend /usr/share/nginx/html
+COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
