--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,24 @@
+
 server {
-    listen 80;
+  listen 80;
+  server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    location / {
-        try_files $uri /index.html;
-    }
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
 
-    location /app-projeto-fullstack/ {
-        proxy_pass http://app-projeto-fullstack:8000;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-    }
+  location /api {
+    proxy_pass http://app-projeto-fullstack:8000;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+  }
+
+  location = /favicon.ico {
+    log_not_found off;
+    access_log off;
+  }
 }
