--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -57,13 +57,7 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "frontend:build:production",
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.development.ts",
-                  "with": "src/environments/environment.ts"
-                }
-              ]
+              "buildTarget": "frontend:build:production"
             },
             "development": {
               "buildTarget": "frontend:build:development"
